objects/nBRIDGER__OFAC_Disposition__c.object
<CustomObject>
    <fields>
        <fullName>nBRIDGER__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__OFAC_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OFAC_Match</label>
        <referenceTo>nBRIDGER__OFAC_Match__c</referenceTo>
        <relationshipLabel>OFAC_Dispositions</relationshipLabel>
        <relationshipName>OFAC_Dispositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Override_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that an Override has been approved for this disposition.</description>
        <label>Override Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Request_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the user has requested an override of this disposition.  Only applies if there is a &quot;Match&quot;.</description>
        <inlineHelpText>Request an override to this disposition.</inlineHelpText>
        <label>Request Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False Positive</fullName>
                </value>
                <value>
                    <fullName>Match</fullName>
                </value>
                <value>
                    <fullName>More Information Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OFAC_Disposition</label>
    <nameField>
        <label>OFAC_Disposition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_Dispositions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>